<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_car"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:civ_border_color="#483D3D"
            app:civ_border_width="2dp"
            android:layout_marginTop="64dp"
            android:id="@+id/imageView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:orientation="vertical"
            android:id="@+id/LL"
            app:layout_constraintTop_toBottomOf="@id/imageView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text=""
                android:id="@+id/destinationText"
                style="@style/TextAppearance.Material3.HeadlineLarge"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/departure_from"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/departureText"
                    android:text=""
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date_"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/startDateText"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date_"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/endDateText"
                    android:text=""
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/description_"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:id="@+id/descriptionText"
                    android:text=""/>
            </ScrollView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.nambimobile.widgets.efab.ExpandableFabLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.nambimobile.widgets.efab.Overlay
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.nambimobile.widgets.efab.ExpandableFab
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            app:efab_icon="@drawable/ic_toc"
            app:efab_iconAnimationRotationDeg="-360"
            app:efab_closingAnticipateTension="0"
            app:label_text="@string/options"/>

        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_edit"
            android:id="@+id/updateButton"
            app:label_text="@string/update"/>

        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_delete"
            android:id="@+id/deleteButton"
            app:label_text="@string/delete"
            app:fab_color="@color/design_default_color_error"/>

        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_place_red"
            android:id="@+id/mapButton"
            app:label_text="@string/show_on_map"/>

        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_event"
            android:id="@+id/addToCalendar"
            app:label_text="@string/add_to_calendar"/>

        <com.nambimobile.widgets.efab.FabOption
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_icon="@drawable/ic_share"
            android:id="@+id/share"
            app:label_text="@string/share"/>

    </com.nambimobile.widgets.efab.ExpandableFabLayout>

</RelativeLayout>