<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/upcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/card_view_background">

        <include
            layout="@layout/closest_trip_card_layout"
            android:id="@+id/latestCardLayout"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upcomingTrips"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_fragment_upcoming_button"
        app:layout_constraintBottom_toTopOf="@+id/pastTrips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pastTrips"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_fragment_past_button"
        app:layout_constraintBottom_toTopOf="@+id/mapFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mapFragment"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_fragment_map_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcoming" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_info"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"/>

    <cz.mendelu.thetrips.views.InfoMessageView
        android:id="@+id/infoMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mapFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        app:message="@string/name_note"/>

</androidx.constraintlayout.widget.ConstraintLayout>